# landell

./: .gitignore  AUTHORS  Makefile.am  README  RELEASE  THANKS  about.py  audio.py  autogen.sh  configure.ac  effects.py  encoding.py  encoding.ui  landell.desktop.in  output.py  output.ui  preview.py  setup.py  sltv.desktop.in  sltv.py  sltv.ui  sltv_ui.py  swap.py  video_switch.py  video_switch.ui
debian/: changelog  control  copyright  docs  sltv.desktop  sltv.install
landell/: Makefile.am  audio.py  audioinputbin.py  audioresample.py  config.py  effects.py  landell.py  log.py  mediaitem.py  medialist.py  metadata.py  multeequeue.py  outputbin.py  preview.py  registry.py  settings.py.in  swap.py  videoconverter.py  videomixer.py  volume.py
landell/effect/: Makefile.am  __init__.py  audio_effect.py  core.py  video_effect.py
landell/encoding/: Makefile.am  __init__.py  core.py  dvenc.py  oggtheoravorbisenc.py  vp8enc.py
landell/input/: Makefile.am  __init__.py  alsainput.py  audiotestinput.py  autoaudioinput.py  core.py  dvinput.py  fileinput.py  httpinput.py  pulseinput.py  v4l2input.py  videotestinput.py  xinput.py
landell/output/: Makefile.am  core.py  fakeoutput.py  fileoutput.py  icecastoutput.py
landell/ui/: Makefile.am  about.py  audiosetting.py  core.py  edit.py  edit_encoding.py  edit_output.py  edit_source.py  effects.py  encoders.py  general.py  medialist.py  message.py  metadata.py  output_item.py  outputs.py  outputs_view.py  overlay.py  pip_widget.py  preview.py  previewarea.py  save_button.py  settings.py  sources.py  sources_view.py  videobalance.py  videoconverter.py  volume.py  watermark.py
landell/ui/encoding/: Makefile.am  __init__.py  core.py  oggtheoravorbisenc.py  vp8enc.py
landell/ui/input/: Makefile.am  alsainput.py  audiotestinput.py  autoaudioinput.py  core.py  dvinput.py  fileinput.py  httpinput.py  pulseinput.py  v4l2input.py  videotestinput.py  xinput.py
landell/ui/output/: Makefile.am  core.py  fakeoutput.py  fileoutput.py  icecastoutput.py  pulseoutput.py
man/: Makefile.am  landell.1
sltv/: Makefile.am  __init__.py  about.py  audio.py  audioinputbin.py  audioresample.py  config.py  dvinput.py  edit_source.py  effects.py  encoding.py  factory.py  fileinput.py  input.py  mediaitem.py  medialist.py  metadata.py  output.py  outputbin.py  outputitem.py  preview.py  registry.py  settings.py  settings.py.in  sltv.in  sltv.py  sltv_ui.py  source.py  sources.py  swap.py  testinput.py  utils.py  v4l2input.py  video_switch.py  videoconverter.py  videomixer.py  volume.py  xinput.py
sltv/effect/: Makefile.am  audio_effect.py  core.py  video_effect.py
sltv/encoding/: Makefile.am  __init__.py  core.py  dvenc.py  oggtheoravorbisenc.py  vp8enc.py
sltv/input/: Makefile.am  alsainput.py  audiotestinput.py  autoaudioinput.py  core.py  dvinput.py  fileinput.py  httpinput.py  pulseinput.py  testinput.py  v4l2input.py  videotestinput.py  xinput.py
sltv/output/: Makefile.am  __init__.py  core.py  fakeoutput.py  fileoutput.py  icecastoutput.py
sltv/ui/: Makefile.am  __init__.py  about.py  audiosetting.py  core.py  dvinput.ui  edit.py  edit_encoding.py  edit_output.py  edit_source.py  edit_source.ui  effects.py  encoders.py  encoding_ui.py  medialist.py  message.py  metadata.py  output.py  output_item.py  output_ui.py  outputs.py  outputs_view.py  overlay.py  pip_widget.py  preview.py  previewarea.py  save_button.py  settings.py  sltv.ui  sources.py  sources_view.py  testinput.ui  v4l2input.ui  video_switch.ui  videobalance.py  videoconverter.py  volume.py  watermark.py  xinput.ui
sltv/ui/encoding/: Makefile.am  __init__.py  core.py  oggtheoravorbisenc.py  vp8enc.py
sltv/ui/input/: Makefile.am  __init__.py  alsainput.py  audiotestinput.py  autoaudioinput.py  core.py  dvinput.py  fileinput.py  fileinput.ui  httpinput.py  pulseinput.py  testinput.py  v4l2input.py  videotestinput.py  xinput.py
sltv/ui/output/: Makefile.am  __init__.py  core.py  fakeoutput.py  fileoutput.py  icecastoutput.py  pulseoutput.py
src/: Makefile.am  landell.in  sltv.in
ui/: Makefile.am  audio_input.ui  edit.ui  edit_source.ui  effects.ui  element_setting.ui  encoding.ui  general.ui  landell.ui  medialist.ui  metadata.ui  output.ui  output_encoder_setting.ui  output_setting.ui  overlay.ui  preview.ui  settings.ui  sltv.ui  source.ui  sources.ui  video_switch.ui  videobalance.ui  volume.ui  watermark.ui
ui/encoding/: Makefile.am  theora.ui
ui/input/: Makefile.am  dvinput.ui  fileinput.ui  httpinput.ui  v4l2input.ui  videotestinput.ui  xinput.ui
ui/output/: Makefile.am  fileoutput.ui  icecastoutput.ui
