SUBDIRS = input ui

sltvlibdir = $(libdir)/sltv
sltvlib_DATA = __init__.py about.py effects.py output.py	\
	settings.py sltv_ui.py swap.py		\
	audio.py edit_source.py encoding.py preview.py		\
	sltv.py sources.py videomixer.py		\
	registry.py factory.py

EXTRA_DIST = $(sltvlib_DATA)

DISTCLEANFILES = settings.py
