SUBDIRS = input ui output encoding effect

sltvlibdir = $(libdir)/sltv
sltvlib_DATA = \
	__init__.py \
	effects.py \
	settings.py \
	swap.py \
	audio.py \
	preview.py \
	sltv.py \
	videomixer.py \
	registry.py \
	factory.py \
	mediaitem.py \
	medialist.py \
	config.py \
	videoconverter.py \
	volume.py \
	log.py \
	audioresample.py \
	utils.py

EXTRA_DIST = $(sltvlib_DATA)

DISTCLEANFILES = settings.py
