SUBDIRS = input output encoding

uidir = $(datadir)/landell
ui_DATA = edit.ui \
	landell.ui \
	medialist.ui \
	output_setting.ui \
	overlay.ui \
	effects.ui \
	audio_input.ui \
	element_setting.ui \
	output_encoder_setting.ui \
	settings.ui \
	source.ui \
	output.ui \
	metadata.ui \
	general.ui \
	videobalance.ui

EXTRA_DIST = $(ui_DATA)
