SUBDIRS = input output encoding

sltvlibdir = $(libdir)/sltv/ui
sltvlib_DATA = \
	__init__.py \
	core.py \
	about.py \
	sources.py \
	edit_source.py \
	message.py \
	edit_output.py \
	edit.py \
	medialist.py \
	outputs.py \
	videoconverter.py \
	preview.py \
	overlay.py \
	effects.py \
	volume.py \
	save_button.py \
	previewarea.py \
	encoders.py \
	edit_encoding.py \
	settings.py \
	sources_view.py

EXTRA_DIST = $(sltvlib_DATA)
